Bug 1230065 - Consider arrow size in dropdown minimum widget size. r=acomminos, a=lizzard